<resources>
    <string name="app_name">IMC</string>
    <string name="calcular_imc">CALCULAR IMC</string>
    <string name="en_metros">en metros</string>
    <string name="todo">TODO</string>
    <string name="su_peso_ideal">SU PESO IDEAL:</string>
    <string name="descripcion">DESCRIPCION:</string>
    <string name="eliminar_datos">ELIMINAR DATOS</string>
    <string name="imc">IMC:</string>
    <string name="altura">ALTURA:</string>
    <string name="en_kilogramos">en kilogramos</string>
    <string name="peso">PESO:</string>
</resources>